kubernetes/apps/selfhosted/forgejo/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: selfhosted
spec:
  hostnames:
    - git.altena.io
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
      matches:
        - path:
            value: /
